feat: added roles and fixed validation
