# roles/roles.dto.go
@@ -1,0 +1,21 @@
+package roles
+
+
+type CreateRoleDTO struct {
+	Name        string `json:"name" binding:"required"`
+	Description string `json:"description"`
+}
+
+type UpdateRoleDTO struct {
+	Name        string `json:"name"`
+	Description string `json:"description"`
+}
+
+type RoleResponseDTO struct {
+	ID          string `json:"id"`
+	Name        string `json:"name"`
+	Description string `json:"description"`
+	CreatedAt   string `json:"created_at"`
+	UpdatedAt   string `json:"updated_at"`
+}
+
