# users/dto.go
@@ -6,7 +6,7 @@ type CreateUserDto struct {
 	Email     string `json:"email" validate:"required,email"`
 	Password  string `json:"password" validate:"required,min=6"`
 	Phone     string `json:"phone" validate:"required"`
-	Role      string `json:"role" validate:"required"`
+	RoleID    string `json:"roleID" validate:"required"`
 	AvatarURL string `json:"avatar_url"`
 }
 
@@ -15,7 +15,7 @@ type UpdateUserDto struct {
 	LastName  string `json:"last_name"`
 	Email     string `json:"email"`
 	Phone     string `json:"phone"`
-	Role      string `json:"role"`
+	RoleID    string `json:"roleID"`
 	AvatarURL string `json:"avatar_url"`
 }
 
@@ -25,7 +25,7 @@ type UserResponseDto struct {
 	LastName       string `json:"last_name"`
 	Email          string `json:"email"`
 	Phone          string `json:"phone"`
-	Role           string `json:"role"`
+	RoleID         string `json:"role_id"`
 	OrganizationID string `json:"organization_id"`
 	AvatarURL      string `json:"avatar_url"`
 	CreatedAt      string `json:"created_at"`
